css/styles.css
body { 
  background-image: url("../images/black.jpg"); 
}

#page-wrapper { 
  width: 960px;
  margin: 0 auto;
  box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1);
  border-radius: 12px 12px 0px 0px; 
}
#header { 
  position: relative;
  margin-top: 40px;
  border-radius: 12px 12px 0px 0px;
}

#header h1 { position: absolute;
  left: 420px;
  top:5px;
  font-size: 3em;
  font-family: 'Devonshire', cursive;
  color: #E35335;
}

#header a#logo1 img { 
  margin-top: 20px;
  margin-left: 20px;
  margin-bottom: 20px;
}
#header #toplink { 
  text-decoration: none;
  position: absolute;
  top:-34px;
  right: 10px;
  color: white;
  font-size: 1.8em;
}

#footer {
  background-color: #777;
  height: 80px;
  clear: both; 
}
#content-wrapper {
  background-image: url("../images/repeating.png");
  float: left;
}
#main-content { 
  min-height: 300px;
  width: 715px;
  margin-right: 30px;
  float: left;
  margin-left: 15px;
}

h2 strong {
  font-size: 2em;
  font-weight: 900;
}

.image-r {
  float: right;
  border: 2px solid blue;
  width: 300px;
  padding: 5px;
  background-color: white;
  margin: 10px 0 10px 20px;
}

#side-content {
  min-height: 150px;
  width: 200px;
  float: left;
}

#main-nav {
  float: left;
  width: 100%;
  background-color: #333;
}

#main-nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  float: left;
  position: relative;
  left:50%;
}

#main-nav ul li {
  float: left;
  position: relative;
  right: 50%;  
}

#main-nav ul li a {
  padding: 10px 25px;
  display: block;
  text-decoration: none;
  color: #ccc;
}

#main-nav ul li a:hover {
  background-color: #ccc;
  color: #333; 
}

#center { 
  width: 960px;
  text-align: center; 
}

strong { 
font-weight: 900;
font-size: 48px; 
}

